--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,7 +53,9 @@ main {
 }
 
 #canvas {
-    background-image: linear-gradient(#AADBF7, #3A89B7 25%, #003C5F, #FFF3CA); /*#005484 */
+    /* background-image: linear-gradient(#AADBF7, #3A89B7 25%, #003C5F, #FFF3CA); */
+    background-image: linear-gradient(#c1ebfc, #37acdc);
+    /* background-color: #37acdc; */
     box-shadow: 10px 10px 8px #888888;
     margin-bottom: 20px;
 }
