--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,7 @@ main {
     /* background-color: #37acdc; */
     box-shadow: 10px 10px 8px #888888;
     margin-bottom: 20px;
+    border: 5px solid transparent;
 }
 
 #strength-area {
