--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,13 @@ body {
 header {
     color: #003C5F;
 }
+#welcoming-page {
+    display: block;
+    position: absolute;
+    background-color: #FFF3CA;
+    width: 100vw;
+    height: 100vh;
+}
 
 main {
     display: flex;
