--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ main {
     height: 100vh;
     left: 0;
     justify-content: center;
-    padding-top: 5rem;
+    padding-top: 1rem;
     background-image: linear-gradient(to right, #003C5F, rgb(0, 33, 53),  #003C5F );
     font-size: 1.5rem;
     color: #c1ebfc;
@@ -171,7 +171,7 @@ main {
     width: 6rem;
     font-size: 1rem;
     padding: initial;
-    border: 2px solid blue;
+    border: 2px solid white;
 }
 
 .vertical-text {
