--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,10 +68,31 @@ header > h1 {
     margin-left: 10px;
 }
 
+#help {
+    position: absolute;
+    display: none;
+    right: 2rem;
+    top: 1rem;
+    margin: 0;
+    background-color: transparent;
+    color: #c1ebfc;
+}
+
 #button-area {
     display: flex;
     justify-content: center;
     margin: 0;
+}
+
+button {
+    display: inline-block;
+    width: 80px;
+    height: 40px;
+    margin: auto;
+    border: 2px solid rgb(0, 33, 53);
+    border-radius: 5px;
+    background-color: #c1ebfc;
+    color: rgb(0, 33, 53);
 }
 
 #play-again-btn,
@@ -84,17 +105,6 @@ header > h1 {
     height: 4rem;
     font-size: 2rem;
     background-color: #aae7ff;
-}
-
-button {
-    display: inline-block;
-    width: 80px;
-    height: 40px;
-    margin: auto;
-    border: 2px solid rgb(0, 33, 53);
-    border-radius: 5px;
-    background-color: #c1ebfc;
-    color: rgb(0, 33, 53);
 }
 
 main {
